// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ConfigureOptions should render configure options 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      configure options
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-dialog-body"
    >
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Variable
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            var-test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Type
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="defaultValue"
        >
          Default value
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="defaultValue"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value=""
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="split"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="validation"
          >
            Validation
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  checked=""
                  name="validation"
                  type="radio"
                  value="None"
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="AllowedValues"
                />
                <span
                  class="bp3-control-indicator"
                />
                Allowed values
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="Regex"
                />
                <span
                  class="bp3-control-indicator"
                />
                Regex
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-dialog-footer"
    >
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Submit
          </span>
        </span>
      </button>
          
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Cancel
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Test ConfigureOptions test allowed advanced values 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      configure options
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-dialog-body"
    >
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Variable
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            var-test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Type
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div>
            Var Test
          </div>
        </div>
      </div>
      <div
        class="split"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="validation"
          >
            Validation
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="None"
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  checked=""
                  name="validation"
                  type="radio"
                  value="AllowedValues"
                />
                <span
                  class="bp3-control-indicator"
                />
                Allowed values
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="Regex"
                />
                <span
                  class="bp3-control-indicator"
                />
                Regex
              </label>
            </div>
          </div>
        </div>
        <div
          class="line"
        />
        <div
          class="allowedOptions"
        >
          <span
            class="advancedBtn"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    return to basic
                  </span>
                </button>
              </span>
            </span>
          </span>
          <div
            class="bp3-form-group secondColumn"
          >
            <label
              class="bp3-label"
              for="advancedValue"
            >
              Values (JEXL Expression)
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                name="advancedValue"
                placeholder="Expression"
              >
                \${env.type} == “prod” ? aws1, aws2 : aws3, aws4
              </textarea>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-dialog-footer"
    >
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Submit
          </span>
        </span>
      </button>
          
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Cancel
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Test ConfigureOptions test allowed values 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      configure options
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-dialog-body"
    >
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Variable
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            var-test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Type
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="defaultValue"
        >
          Default value
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="defaultValue"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value=""
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <div
          class="bp3-form-content"
        >
          <label
            class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checkbox checkbox StyledProps--main StyledProps--inline"
          >
            <input
              checked=""
              name="isRequired"
              type="checkbox"
            />
            <span
              class="bp3-control-indicator"
            />
            Required during execution
          </label>
        </div>
      </div>
      <div
        class="split"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="validation"
          >
            Validation
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="None"
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  checked=""
                  name="validation"
                  type="radio"
                  value="AllowedValues"
                />
                <span
                  class="bp3-control-indicator"
                />
                Allowed values
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="Regex"
                />
                <span
                  class="bp3-control-indicator"
                />
                Regex
              </label>
            </div>
          </div>
        </div>
        <div
          class="line"
        />
        <div
          class="allowedOptions"
        >
          <span
            class="advancedBtn"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    advanced
                  </span>
                </button>
              </span>
            </span>
          </span>
          <div
            class="bp3-form-group secondColumn"
          >
            <label
              class="bp3-label"
              for="allowedValues"
            >
              Values
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper MultiSelect--main bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="bp3-input bp3-tag-input bp3-multi-select"
                    >
                      <div
                        class="bp3-tag-input-values"
                      >
                        <input
                          class="bp3-input-ghost bp3-multi-select-tag-input-input"
                          name="allowedValues"
                          placeholder="Search..."
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-dialog-footer"
    >
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Submit
          </span>
        </span>
      </button>
          
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Cancel
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Test ConfigureOptions test regex expression 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      configure options
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-dialog-body"
    >
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Variable
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            var-test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group bp3-inline label"
      >
        <label
          class="bp3-label"
        >
          Type
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <p
            class="StyledProps--font StyledProps--main"
          >
            test
          </p>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="defaultValue"
        >
          Default value
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper Select--main bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="defaultValue"
                  placeholder="Search..."
                  style="padding-right: 0px;"
                  type="text"
                  value=""
                />
                <span
                  class="bp3-input-action"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="14"
                      viewBox="0 0 16 16"
                      width="14"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="split"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="validation"
          >
            Validation
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="None"
                />
                <span
                  class="bp3-control-indicator"
                />
                None
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  name="validation"
                  type="radio"
                  value="AllowedValues"
                />
                <span
                  class="bp3-control-indicator"
                />
                Allowed values
              </label>
              <label
                class="bp3-control bp3-radio Radio--radio"
              >
                <input
                  checked=""
                  name="validation"
                  type="radio"
                  value="Regex"
                />
                <span
                  class="bp3-control-indicator"
                />
                Regex
              </label>
            </div>
          </div>
        </div>
        <div
          class="line"
        />
        <div
          class="bp3-form-group secondColumn"
        >
          <label
            class="bp3-label"
            for="regExValues"
          >
            Regex
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="regExValues"
            >
              ^a$
            </textarea>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-dialog-footer"
    >
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Submit
          </span>
        </span>
      </button>
          
      <button
        class="bp3-button StyledProps--font Button--button StyledProps--main"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          <span>
            Cancel
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
